# win-acl-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
doc/: .rustc_info.json  .rustdoc_fingerprint.json
doc/debug/.fingerprint/bitflags-681a0d01572291a0/: lib-bitflags  lib-bitflags.json
doc/debug/.fingerprint/win-acl-rs-d0cf4ceac752551b/: doc-lib-win_acl_rs  doc-lib-win_acl_rs.json
doc/debug/.fingerprint/windows-link-040773b0e32c7ac3/: lib-windows_link  lib-windows_link.json
doc/debug/.fingerprint/windows-sys-266065d005eee921/: lib-windows_sys  (+1 more)
doc/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/doc/win_acl_rs/: all.html  constant.SE_DS_OBJECT.html  constant.SE_DS_OBJECT_ALL.html  constant.SE_FILE_OBJECT.html  constant.SE_KERNEL_OBJECT.html  constant.SE_LMSHARE.html  constant.SE_PRINTER.html  constant.SE_PROVIDER_DEFINED_OBJECT.html  constant.SE_REGISTRY_KEY.html  constant.SE_REGISTRY_WOW64_32KEY.html  constant.SE_REGISTRY_WOW64_64KEY.html  constant.SE_SERVICE.html  constant.SE_UNKNOWN_OBJECT_TYPE.html  constant.SE_WINDOW_OBJECT.html  index.html  macro.assert_free!.html  macro.assert_free.html  macro.winapi_bool_call!.html  macro.winapi_bool_call.html  macro.winapi_call!.html  macro.winapi_call.html  sidebar-items.js  type.SE_OBJECT_TYPE.html
examples/: cargo.toml  example.rs
scripts/: check.cmd  fmt-nightly.cmd  gen_doc.cmd
src/: acl.rs  elevated.rs  lib.rs  macros.rs  mask.rs  sd.rs  sid.rs  tests.rs  trustee.rs  utils.rs  wellknown.rs
tests/: acl_tests.rs  sd_tests.rs  sid_tests.rs
(+249 files in other folders)
